Added functionality to register multiple students - Change default value

--- a/src/main/resources/templates/register_students.html
+++ b/src/main/resources/templates/register_students.html
@@ -31,7 +31,7 @@
                         <input type="checkbox"
                                th:name="|registeredList[${i.index}]|"
                                th:value="${true}"
-                               th:checked="${true}"
+                               th:checked="${false}"
                                class="col-sm-1 left-aligned"
                         >
                     </div>
@@ -47,7 +47,7 @@
                         <input type="checkbox"
                                th:name="|unregisteredList[${i.index}]|"
                                th:value="${true}"
-                               th:checked="${true}"
+                               th:checked="${false}"
                                class="col-sm-1 left-aligned"
                         >
                     </div>
