--- a/src/main/resources/templates/course_index.html
+++ b/src/main/resources/templates/course_index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <title>Courses</title>
     <div th:replace="head_fragment :: scripts"></div>
+    <script>
+        function show(name) {
+            var elements = document.getElementsByName(name);
+            for (var i = 0; i < elements.length; i++) {
+                var currentStyle = elements[i].style.display;
+                if (currentStyle == "") {
+                    currentStyle = "none";
+                } else {
+                    currentStyle = "";
+                }
+                elements[i].style.display = currentStyle;
+            }
+        }
+    </script>
 </head>
 <body>
 <div th:insert="header_selector :: selector(user=${user})"></div>
@@ -54,6 +68,9 @@
         <th>
             <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerToCourse")}'></th:block>
         </th>
+        <th>
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registeredStudents")}'></th:block>
+        </th>
     </tr>
     </thead>
     <th:block th:each="course : ${courses}">
@@ -70,9 +87,16 @@
             <td><a th:href="@{/Course/RegisterNew(courseId=${course.getId()})}"/>
                 <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerToCourse")}'></th:block>
             </td>
+            <td>
+                <button th:onclick="show([['course-' + ${course.getId()}]])" class="button btn-dark">
+                    <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "displayStudents1")}'></th:block>
+                    <th:block th:text="${course.getStudents().size()}"></th:block>
+                    <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "displayStudents2")}'></th:block>
+                </button>
+            </td>
         </tr>
         <th:block th:each="student : ${course.getStudents()}">
-            <tr class="table-light">
+            <tr class="table-light" th:name="'course-'+${course.getId()}" style="display:none">
                 <td th:utext="${student}"></td>
                 <td></td>
                 <td></td>
@@ -97,6 +121,7 @@
                     )}"/>
                     <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "removeFromCourse")}'></th:block>
                 </td>
+                <td></td>
             </tr>
         </th:block>
     </th:block>
