--- a/src/main/resources/templates/register_students.html
+++ b/src/main/resources/templates/register_students.html
@@ -8,65 +8,67 @@
 <body>
 <div th:insert="header_selector :: selector(user=${user})"></div>
 <h2 th:text="${course.getTitle()}"></h2>
-<form action="#" th:action="@{/Course/RegisterNew}" th:object="${wrapper}" method="post">
-    <div>
-        <div class="form-group row">
+<div class="left-margin-small">
+    <form action="#" th:action="@{/Course/RegisterNew}" th:object="${wrapper}" method="post">
+        <div>
+            <div class="form-group row">
             <span class="col-sm-4">
                 <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerStudents")}'></th:block>
             </span>
-            <span class="col-sm-4">
+                <span class="col-sm-4">
                 <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "unregisterStudents")}'></th:block>
             </span>
-        </div>
-        <div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div th:each="data, i : ${wrapper.studentIdList}" class="form-group row">
-                        <p th:text="${students.get(i.index)}" class="col-sm-4"></p>
-                        <input type="hidden"
-                               th:name="|studentIdList[${i.index}]|"
-                               th:value="${students.get(i.index).getId()}"
-                               class="col-sm-4"
-                        >
-                        <input type="checkbox"
-                               th:name="|registeredList[${i.index}]|"
-                               th:value="${true}"
-                               th:checked="${false}"
-                               class="col-sm-1 left-aligned"
-                        >
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div th:each="data, i : ${wrapper.studentIdList}" class="form-group row">
+                            <p th:text="${students.get(i.index)}" class="col-sm-4"></p>
+                            <input type="hidden"
+                                   th:name="|studentIdList[${i.index}]|"
+                                   th:value="${students.get(i.index).getId()}"
+                                   class="col-sm-4"
+                            >
+                            <input type="checkbox"
+                                   th:name="|registeredList[${i.index}]|"
+                                   th:value="${true}"
+                                   th:checked="${false}"
+                                   class="col-sm-1 left-aligned"
+                            >
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
-                    <div th:each="data, i : ${wrapper.registeredStudentIdList}" class="form-group row">
-                        <p th:text="${registeredStudents.get(i.index)}" class="col-sm-4"></p>
-                        <input type="hidden"
-                               th:name="|registeredStudentIdList[${i.index}]|"
-                               th:value="${registeredStudents.get(i.index).getId()}"
-                               class="col-sm-4"
-                        >
-                        <input type="checkbox"
-                               th:name="|unregisteredList[${i.index}]|"
-                               th:value="${true}"
-                               th:checked="${false}"
-                               class="col-sm-1 left-aligned"
-                        >
+                    <div class="col-sm-4">
+                        <div th:each="data, i : ${wrapper.registeredStudentIdList}" class="form-group row">
+                            <p th:text="${registeredStudents.get(i.index)}" class="col-sm-4"></p>
+                            <input type="hidden"
+                                   th:name="|registeredStudentIdList[${i.index}]|"
+                                   th:value="${registeredStudents.get(i.index).getId()}"
+                                   class="col-sm-4"
+                            >
+                            <input type="checkbox"
+                                   th:name="|unregisteredList[${i.index}]|"
+                                   th:value="${true}"
+                                   th:checked="${false}"
+                                   class="col-sm-1 left-aligned"
+                            >
+                        </div>
                     </div>
                 </div>
             </div>
+            <input type="hidden" name="courseId" th:value="${course.getId()}">
         </div>
-        <input type="hidden" name="courseId" th:value="${course.getId()}">
-    </div>
-    <div class="form-group row">
-        <div class="col-sm-6">
-            <button type="submit" class="btn btn-primary">
-                <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "submit")}'></th:block>
-            </button>
-            <button type="button" class="btn btn-primary" onclick="history.back()">
-                <th:block th:text='${T(com.smanager.Bundles).getMessage("button", "cancel")}'></th:block>
-            </button>
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <button type="submit" class="btn btn-primary">
+                    <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "submit")}'></th:block>
+                </button>
+                <button type="button" class="btn btn-primary" onclick="history.back()">
+                    <th:block th:text='${T(com.smanager.Bundles).getMessage("button", "cancel")}'></th:block>
+                </button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
 
 </body>
 </html>
